# wrapped

./: .gitignore  README.md  analyzer.py  claude_wrapped.html  generator.py  git_analyzer.py  main.py  metrics_db.py  patterns.py  proficiency_analyzer.py  project_analyzer.py  prompt_dna.py  pyproject.toml  snapshot.md
.claude/skills/claude-folder/: CLAUDE_DATA_SCHEMA.md  SKILL.md
.claude/skills/context-engineering/: CONTEXT_ROT_RESEARCH.md  SKILL.md
.claude/skills/git-repo-analysis/: GIT_METRICS_RESEARCH.md  SKILL.md
docs/: PROMPTING_PROFICIENCY_RESEARCH.md
src/: analyzer.py  generator.py  main.py
templates/: wrapped.html
