[project]
name = "claude-wrapped"
version = "0.1.0"
description = "A viral year-in-review for your local Claude CLI usage."
authors = [{name = "Antigravity", email = "antigravity@example.com"}]
dependencies = [
    "pandas>=2.0.0",
    "jinja2>=3.1.0",
    "plotly>=5.18.0",
    "pytest>=7.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
